--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://use.typekit.net/euz8jwl.css"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/images/light.jpg">
+    <link rel="preload" as="image" href="%PUBLIC_URL%/images/dark.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Disrupt Vaults"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
